auth and fetch work

--- a/src/app/Components/thread/thread.component.html
+++ b/src/app/Components/thread/thread.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <img src={{threadImg}} />
   <div class="inner">
-    <span class="name"> {{threadName}} </span>
-    <span class="msg"> {{lastMessage}} </span>
+    <span class="name" [ngStyle]="{'font-weight': !lastSeen ? 'bold' : '0'}"> {{threadName}} </span>
+    <span class="msg" [ngStyle]="{'font-weight': !lastSeen ? 'bold' : '0'}"> {{lastMessage}} </span>
   </div>
 </div>
