--- a/src/app/Containers/new/new.component.html
+++ b/src/app/Containers/new/new.component.html
@@ -1,3 +1,6 @@
-<div class="stick" *ngIf="show">
-    <input placeholder="Type a message">
-</div>
+<form (ngSubmit)="send(message.value)" class="stick" *ngIf="show">
+    <input [formControl]="message" placeholder="Type a message">
+    <button type="submit" [disabled]="!message.valid" mat-icon-button color="primary">
+        <mat-icon>send</mat-icon>
+    </button>
+</form>
