--- a/src/app/Components/message/message.component.html
+++ b/src/app/Components/message/message.component.html
@@ -1,9 +1,12 @@
 <div [class]="senderId === currentUserId ? 'right' : 'left'">
   <div class="message">
-    <h5 *ngIf="isGroup">{{senderName}}</h5>
-    <div class="inner">
+    <h5 *ngIf="isGroup">{{senderId === currentUserId ? '' : senderName}}</h5>
+    <div *ngIf="messageType == 0" class="inner">
       <h4>{{message}}</h4>
       <p>{{dateTime}}</p>
+    </div>
+    <div *ngIf="messageType == 1">
+      <img (click)="openImg()" width="350" [src]="message">
     </div>
   </div>
 </div>
