--- a/src/app/Containers/chat/chat.component.html
+++ b/src/app/Containers/chat/chat.component.html
@@ -3,9 +3,11 @@
   <p>Select any thread from the left to start a conversation</p>
 </div>
 
-<div *ngFor="let message of chatList">
-  <app-message [senderName]="message.senderName" [isGroup]="isGroup" [senderId]="message.sendUid"
-    [message]="message.message" [dateTime]="message.dateTime"></app-message>
+<div>
+  <div *ngFor="let message of chatList">
+    <app-message [messageType]="message.messageType" [senderName]="message.senderName" [isGroup]="isGroup"
+      [senderId]="message.sendUid" [message]="message.message" [dateTime]="message.dateTime"></app-message>
+  </div>
 </div>
 <br />
 <br />
