date save and conversion work

--- a/src/app/Components/message/message.component.html
+++ b/src/app/Components/message/message.component.html
@@ -3,7 +3,7 @@
     <h5 *ngIf="isGroup">{{senderId === currentUserId ? '' : senderName}}</h5>
     <div *ngIf="messageType == 0" class="inner">
       <h4>{{message}}</h4>
-      <p>{{dateTime}}</p>
+      <p>{{dateTime | dateToLocal}}</p>
     </div>
     <div *ngIf="messageType == 1">
       <img (click)="openImg()" width="350" [src]="message">
