--- a/src/app/Containers/new/new.component.scss
+++ b/src/app/Containers/new/new.component.scss
@@ -1,7 +1,7 @@
 .stick {
   position: fixed;
   bottom: 0;
-  background-color: #ccc;
+  background-color: rgb(233, 235, 235);
   width: calc(100% - 349px);
   display: flex;
   align-items: center;
