profile image and loutout functionality

--- a/src/app/Containers/chat/chat.component.html
+++ b/src/app/Containers/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="chatList.length === 0" class="main">
   <h1>Welcome</h1>
-  <p>Select any thread from the left to start a conversation</p>
+  <p>Select any thread to start a conversation</p>
 </div>
 
 <div>
