--- a/src/app/Components/message/message.component.html
+++ b/src/app/Components/message/message.component.html
@@ -7,6 +7,7 @@
     </div>
     <div *ngIf="messageType == 1">
       <img (click)="openImg()" width="350" [src]="message">
+      <p>{{dateTime | dateToLocal}}</p>
     </div>
   </div>
 </div>
