--- a/src/app/Containers/login/login.component.scss
+++ b/src/app/Containers/login/login.component.scss
@@ -17,6 +17,7 @@
 .login-button {
   font-size: 18px;
   margin-top: 20px;
+  color: white;
 }
 
 .code {
@@ -24,7 +25,16 @@
   display: flex;
   justify-content: center;
 }
-.code-button {
-  margin-left: 10px;
-  margin-top: 10px;
+::ng-deep .code-button {
+  margin-left: 15px;
+  margin-top: 15px;
+  color: white !important;
+}
+
+h1 {
+  font-size: 45px;
+  color: white;
+  background-color: #4caf50;
+  padding: 10px 30px 10px 30px;
+  border-radius: 40px 40px 40px 0px;
 }
