--- a/src/app/Containers/threads/threads.component.html
+++ b/src/app/Containers/threads/threads.component.html
@@ -3,10 +3,13 @@
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="!(isHandset$ | async)">
     <mat-toolbar style="display: flex; justify-content: space-between;">
-      <img width="30" [src]="profileImg">
-      <button (click)="logOut()" matTooltip="Log Out" color="warn" mat-icon-button>
-        <mat-icon aria-label="Side nav toggle icon">power_settings_new</mat-icon>
-      </button>
+      <span>P-Messenger</span>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <img width="30" height="30" [src]="profileImg ? profileImg : '../../../assets/Images/source.gif'">
+        <button (click)="logOut()" matTooltip="Log Out" color="warn" mat-icon-button>
+          <mat-icon aria-label="Side nav toggle icon">power_settings_new</mat-icon>
+        </button>
+      </div>
     </mat-toolbar>
     <hr />
     <mat-nav-list *ngFor="let item of threadList">
@@ -21,11 +24,11 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
+      <span style="color: white;">{{selectedThread.dateTime ? (selectedThread.combineUid ? selectedThread.snederObject.name : selectedThread.groupObject.groupName) : ''}}</span>
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <!-- <span>p-messenger</span> -->
     </mat-toolbar>
     <app-chat [selectedThread]="selectedThread"></app-chat>
     <app-new [selectedThread]="selectedThread"></app-new>
