--- a/src/app/Containers/chat/chat.component.html
+++ b/src/app/Containers/chat/chat.component.html
@@ -3,7 +3,7 @@
   <p>Select any thread to start a conversation</p>
 </div>
 
-<div>
+<div class="chat" #scrollDiv [scrollTop]="scrollDiv.scrollHeight">
   <div *ngFor="let message of chatList">
     <app-message [messageType]="message.messageType" [senderName]="message.senderName" [isGroup]="isGroup"
       [senderId]="message.sendUid" [message]="message.message" [dateTime]="message.dateTime"></app-message>
