--- a/src/app/Containers/login/login.component.scss
+++ b/src/app/Containers/login/login.component.scss
@@ -38,3 +38,9 @@ h1 {
   padding: 10px 30px 10px 30px;
   border-radius: 40px 40px 40px 0px;
 }
+
+.login-error {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 500;
+}
