--- a/src/app/Containers/chat/chat.component.html
+++ b/src/app/Containers/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="chatList.length === 0" class="main">
+<div *ngIf="!selectedThread.hasOwnProperty('combineUid')" class="main">
   <h1>Welcome</h1>
   <p>Select any thread to start a conversation</p>
 </div>
