--- a/src/app/Containers/new/new.component.html
+++ b/src/app/Containers/new/new.component.html
@@ -2,7 +2,7 @@
     <button class="upload-image" type="button" (click)="uploadImage()" mat-icon-button color="primary">
         <mat-icon>insert_photo</mat-icon>
     </button>
-    <input [formControl]="message" placeholder="Type a message">
+    <textarea rows="1" [formControl]="message" placeholder="Type a message"></textarea>
     <button class="send" type="submit" [disabled]="!message.valid" mat-icon-button color="primary">
         <mat-icon>send</mat-icon>
     </button>
