--- a/src/app/Containers/new/new.component.scss
+++ b/src/app/Containers/new/new.component.scss
@@ -5,7 +5,7 @@
   width: calc(100% - 349px);
   display: flex;
   align-items: center;
-  input {
+  textarea {
     flex: 1;
     font-size: 15px;
     padding: 10px;
