--- a/src/app/Containers/new/upload-file-dialog.html
+++ b/src/app/Containers/new/upload-file-dialog.html
@@ -1,6 +1,6 @@
 <div mat-dialog-content>
     <p>Select an image to upload</p>
-    <input (change)="handleFileInput($event.target.files)" type="file">
+    <input (change)="handleFileInput($event.target.files)" type="file" accept="image/*">
 </div>
 <div mat-dialog-actions>
     <button color="primary" mat-button (click)="onNoClick()">No Thanks</button>
